--- a/src/components/Movie/MoviePlayer/MoviePlayer.module.scss
+++ b/src/components/Movie/MoviePlayer/MoviePlayer.module.scss
@@ -1,6 +1,12 @@
 .MovieFrame {
-  width: 560px;
-  height: 315px;
+  width: 50%;
   padding-left: 10px;
-  padding-top: 10px;
+  padding-right: 10px;
+}
+
+@media only screen and (min-width: 768px) {
+  iframe {
+    width: 560px;
+    height: 315px;
+  }
 }
