--- a/src/components/SignIn/UserControl/UserControl.module.scss
+++ b/src/components/SignIn/UserControl/UserControl.module.scss
@@ -6,4 +6,10 @@ button {
   margin-left: 10px;
   margin-right: 10px;
   height: 30px;
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
