Modify MovieDescription CSS

--- a/src/components/MovieItem/MovieInfo/MovieInfo.module.scss
+++ b/src/components/MovieItem/MovieInfo/MovieInfo.module.scss
@@ -30,3 +30,10 @@
   height: 60%;
   overflow: hidden;
 }
+
+@media only screen and (max-width: 1000px) {
+  .MovieDescription {
+    height: 10%;
+  }
+}
+
